--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -75,7 +75,7 @@ jobs:
 
 
   docker:
-    - name: docker build & push
+    - name: docker build and  push
       runs-on: ubuntu-latest
       needs: [build]
       env:
