--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -75,74 +75,74 @@ jobs:
 
 
   docker:
-    - name: docker build and  push
+      name: docker build and  push
       runs-on: ubuntu-latest
       needs: [build]
       env:
         REGISTRY: ghcr.io
         IMAGE_NAME: ${{ github.repository }}
-        outputs:
-          image_tag: ${{ steps.set_output_outputs.image_tag }}
-        steps:
-          - name: checkout code
-            uses: actions/checkout@v4
+      outputs:
+        image_tag: ${{ steps.set_output_outputs.image_tag }}
+      steps:
+        - name: checkout code
+          uses: actions/checkout@v4
 
-          - name: download build artifact
-            uses: actions/download-artifact@v4
-            with:
-              name: build-artifact
-              path: dist/
+        - name: download build artifact
+          uses: actions/download-artifact@v4
+          with:
+            name: build-artifact
+            path: dist/
 
-          - name: setup docker buildx
-            uses: docker/setup-buildx-action@v3
+        - name: setup docker buildx
+          uses: docker/setup-buildx-action@v3
 
-          - name: login to github container registry
-            uses: docker/login-action@v3
-            with:
-              registry: ${{ env.REGISTRY }}
-              username: ${{ github.actor }}
-              password: ${{ secrets.TOKEN }}
+        - name: login to github container registry
+          uses: docker/login-action@v3
+          with:
+            registry: ${{ env.REGISTRY }}
+            username: ${{ github.actor }}
+            password: ${{ secrets.TOKEN }}
 
-          - name: extract metadata from docker
-            id: meta
-            uses: docker/metadata-action@v5
-            with:
-              images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-              tags:
-                type=sha, format=long
-                type=ref, event=branch
-                latest
+        - name: extract metadata from docker
+          id: meta
+          uses: docker/metadata-action@v5
+          with:
+            images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+            tags:
+              type=sha, format=long
+              type=ref, event=branch
+              latest
 
-          - name: build docker image
-            uses: docker/build-push-action@v5
-            with:
-              context: .
-              push: false
-              tags: ${{ steps.meta.outputs.tags }}
-              labels: ${{ steps.meta.output.labels }}
-              load: true
+        - name: build docker image
+          uses: docker/build-push-action@v5
+          with:
+            context: .
+            push: false
+            tags: ${{ steps.meta.outputs.tags }}
+            labels: ${{ steps.meta.output.labels }}
+            load: true
 
-          - name: Run Trivy vulnerability scanner
-            uses: aquasecurity/trivy-action@master
-            with:
-              image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:sha-${{ github.sha }}
-              format: 'table'
-              exit-code: '1'
-              ignore-unfixed: true
-              vuln-type: 'os,library'
-              severity: 'CRITICAL,HIGH'
+        - name: Run Trivy vulnerability scanner
+          uses: aquasecurity/trivy-action@master
+          with:
+            image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:sha-${{ github.sha }}
+            format: 'table'
+            exit-code: '1'
+            ignore-unfixed: true
+            vuln-type: 'os,library'
+            severity: 'CRITICAL,HIGH'
 
-          - name: Push Docker image
-            uses: docker/build-push-action@v5
-            with:
-              context: .
-              push: true
-              tags: ${{ steps.meta.outputs.tags }}
-              labels: ${{ steps.meta.outputs.labels }}
+        - name: Push Docker image
+          uses: docker/build-push-action@v5
+          with:
+            context: .
+            push: true
+            tags: ${{ steps.meta.outputs.tags }}
+            labels: ${{ steps.meta.outputs.labels }}
 
-          - name: Set image tag output
-            id: set_output
-            run: echo "image_tag=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_OUTPUT
+        - name: Set image tag output
+          id: set_output
+          run: echo "image_tag=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_OUTPUT
 
   update-k8s:
     name: Update Kubernetes Deployment
