--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ main ]
     paths-ignore: 
-      - "/kubernetes/deployment.yaml"
+      - "kubernetes/deployment.yaml"
   pull_request:
     branches: [ main ]
 
@@ -25,7 +25,7 @@ jobs:
         run: npm ci
 
       - name: run tests
-        run: npm test || "no test found"
+        run: npm test || echo "no test found"
 
   lint:
     name: static code analysis
@@ -35,7 +35,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: setup nodejs
-        uses: actions/setup-nodejs@v4
+        uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
@@ -56,7 +56,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: setup nodejs
-        uses: actions/setup-nodejs
+        uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
@@ -65,7 +65,7 @@ jobs:
         run: npm ci
 
       - name: build
-        run: run npm build
+        run: npm run build
 
       - name: upload build project
         uses: actions/upload-artifact@v4
@@ -82,7 +82,7 @@ jobs:
         REGISTRY: ghcr.io
         IMAGE_NAME: ${{ github.repository }}
       outputs:
-        image_tag: ${{ steps.set_output_outputs.image_tag }}
+        image_tag: ${{ steps.set_output.outputs.image_tag }}
       steps:
         - name: checkout code
           uses: actions/checkout@v4
@@ -119,7 +119,7 @@ jobs:
             context: .
             push: false
             tags: ${{ steps.meta.outputs.tags }}
-            labels: ${{ steps.meta.output.labels }}
+            labels: ${{ steps.meta.outputs.labels }}
             load: true
 
         - name: Run Trivy vulnerability scanner
