--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -80,7 +80,7 @@ jobs:
       needs: [build]
       env:
         REGISTRY: ghcr.io
-        IMAGE_NAME: ${{ github.repository }}
+        IMAGE_NAME: ${{ toLower(github.repository) }}
       outputs:
         image_tag: ${{ steps.set_output.outputs.image_tag }}
       steps:
@@ -123,7 +123,7 @@ jobs:
             load: true
 
         - name: Run Trivy vulnerability scanner
-          uses: aquasecurity/trivy-action@master
+          uses: aquasecurity/trivy-action@0.28.0
           with:
             image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:sha-${{ github.sha }}
             format: 'table'
