--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -80,7 +80,7 @@ jobs:
       needs: [build]
       env:
         REGISTRY: ghcr.io
-        IMAGE_NAME: ${{ toLower(github.repository) }}
+        IMAGE_NAME: ${{ github.repository }}
       outputs:
         image_tag: ${{ steps.set_output.outputs.image_tag }}
       steps:
