--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -102,6 +102,8 @@ jobs:
             registry: ${{ env.REGISTRY }}
             username: ${{ github.actor }}
             password: ${{ secrets.TOKEN }}
+        - name: set lowercase image name
+          run: echo "IMAGENAME=$(echo $GITHUBREPOSITORY | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
         - name: extract metadata from docker
           id: meta
