--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ main ]
     paths-ignore: 
-      - "kubernetes/deployment.yaml"
+      - "/home/ubuntu/Rutvik/devsecops/tic-tac-toe/kubernates/deployment.yaml"
   pull_request:
     branches: [ main ]
 
