deployment.yaml modified

--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -35,3 +35,5 @@ spec:
             requests:
               cpu: "0.2"
               memory: "256Mi"
+    imagePullSecrets:
+      - name: github-container-registry
